[package]
name = "process"
version = "0.1.0"
authors = ["Pablo Klijnjan <pabloklijnjan@gmail.com>"]

[dependencies.amqp]
git = "https://github.com/Antti/rust-amqp"

[dependencies]
time = "0.1"
log = "*"
glob = "*"
hyper = "*"
etcd = "0.2.0"
chrono = "0.2"
regex = "0.1.8"
env_logger = "*"
rustc-serialize = "0.3"
